# GeekBrains-Orion-Scrum-Team

./: .gitignore  README.md  pyproject.toml  requirements.txt
orion/: .env  .env-template  Dockerfile  db.json  requirements.txt
orion/comments/: views.py
orion/complaints/: forms.py  models.py  views.py
orion/complaints/migrations/: 0001_initial.py
orion/hub/: models.py  urls.py  views.py
orion/likes/: models.py  views.py
orion/moderation/: models.py  services.py  urls.py  views.py
orion/moderation/migrations/: 0002_alter_moderation_decision.py
orion/notifications/: models.py  services.py  urls.py  views.py
orion/notifications/migrations/: 0001_initial.py  0002_notification_target_user_notification_user.py
orion/orion/: middleware.py  settings.py  urls.py  views.py
orion/posts/: admin.py  models.py  urls.py  views.py
orion/posts/migrations/: 0009_post_tags_alter_post_status.py  0010_alter_post_status.py  0010_alter_post_status_alter_post_tags.py  0010_post_tags_alter_post_status.py  0010_rutag_rutaggeditem_post_tags_alter_post_slug_and_more.py  0011_alter_post_status.py  0012_alter_post_status.py  0013_merge_20220324_1946.py
orion/static_files/css/: style.css
orion/static_files/js/: app.js  moderation.js  notifications.js
orion/tags/: models.py  urls.py  views.py
orion/tags/migrations/: 0001_initial.py
orion/templates/: index.html
orion/templates/cabinet/: index.html
orion/templates/comments/: comment.html  form.html  list.html
orion/users/: admin.py  forms.py  models.py  permission_services.py  urls.py  views.py
(+31 files in other folders)
