[tool.poetry]
name = "orion"
version = "0.1.0"
description = ""
authors = ["konstantin_paulkin_tgt <konstantin.paulkin@tgtdiagnostics.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.2"
Pillow = "9.0.1"
python-dotenv = "^0.19.2"
pytils = "^0.3"
crispy-bootstrap5 = "0.6"
django-tinymce = "3.4.0"
gTTS = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
